--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,6 +99,10 @@ p {
   margin: 2%;
 }
 
+.text-align {
+  text-align: center;
+}
+
 /*Header*/
 
 header {
@@ -222,6 +226,11 @@ footer a {
 }
 
 /* Producers */
+.heading-content {
+  height: 130px;
+  padding: 40px 40px 50px 40px;
+  background-color: #282827;
+}
 
 .producer {
   width: 50%;
@@ -238,12 +247,6 @@ footer a {
   padding: 5%;
   border: 1px solid #a27201;
   margin: 0 auto 20px auto;
-}
-
-.heading-content {
-  height: 130px;
-  padding: 40px 40px 50px 40px;
-  background-color: #282827;
 }
 
 .grid-content {
@@ -300,10 +303,6 @@ footer a {
 
 /* Create an account - forms */
 
-.h1-form {
-  font-size: 2em;
-}
-
 .grid-h1 {
   align-self: center;
 }
@@ -333,7 +332,6 @@ fieldset {
 }
 
 .arrow-button {
-  color: #a27201;
   font-size: 3em;
   background-color: #373736;
   border: 0;
@@ -348,17 +346,14 @@ label {
   color: #d6d0c8;
 }
 
-.circle {
-  color: #a27201;
-  opacity: 0.5;
-  font-size: 1em;
-  padding: 6px;
-}
-
+.circle,
 .active-circle {
   color: #a27201;
   font-size: 1em;
   padding: 6px;
+}
+.circle {
+  opacity: 0.5;
 }
 
 .circle-section {
@@ -440,6 +435,7 @@ label {
   text-align: center;
   margin-bottom: 0;
 }
+
 .h1-subtext2 {
   font-family: sans-serif;
   color: #d6d0c8;
@@ -505,6 +501,8 @@ label {
   opacity: 1;
 }
 
+/* Manage producer account */
+
 .button2-icon {
   font-size: 1em;
   color: #a27201;
@@ -522,6 +520,8 @@ label {
   width: 140px;
   margin: auto;
 }
+
+/*Search results*/
 
 .search-input {
   border: solid 1px #a27201;
@@ -548,6 +548,8 @@ label {
   display: flex;
   justify-content: center;
 }
+
+/* Watcer profile */
 
 .profile-picture-watcher {
   width: 100%;
@@ -583,18 +585,21 @@ label {
   margin-top: 0;
 }
 
+/* Films */
+
 .watch-button {
   width: 130px;
   margin: auto;
 }
 
-.text-align {
-  text-align: center;
-}
-
 @media (min-width: 900px) {
   h1 {
     font-size: 3em;
+  }
+
+  .h1-form,
+  .success-section h1 {
+    font-size: 2em;
   }
 
   .flex-content {
