--- a/styles/index.css
+++ b/styles/index.css
@@ -65,6 +65,10 @@ nav a:hover {
   font-size: 15px;
 }
 
+.navbar ul {
+  margin: auto;
+}
+
 main {
   background-image: url(/images/watchingfilm.jpg);
   background-color: #373736;
@@ -251,6 +255,10 @@ footer a {
 
   .navbar {
     font-size: 20px;
+  }
+
+  .navbar ul {
+    margin-left: 59px;
   }
 
   h1 {
