--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@ header {
 }
 
 header .logo {
-  max-height: 80px;
+  max-width: 35%;
   margin-top: 0;
 }
 
@@ -250,6 +250,7 @@ footer a {
   }
 
   header .logo {
+    max-width: unset;
     max-height: 100px;
     margin-top: 0;
     float: left;
