--- a/styles/styles.css
+++ b/styles/styles.css
@@ -606,6 +606,16 @@ label {
     float: left;
   }
 
+  .full-viewport {
+    min-height: 100vh;
+  }
+
+  .footer {
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+  }
+
   .navbar {
     font-size: 20px;
     text-align: unset;
