--- a/styles/index.css
+++ b/styles/index.css
@@ -88,8 +88,9 @@ nav a:hover {
   color: #a27201;
   font-size: 2em;
   text-align: center;
-  padding-top: 70%;
   margin-top: 0;
+  position: absolute;
+  top: 200px;
 }
 
 h2,
