--- a/styles/styles.css
+++ b/styles/styles.css
@@ -604,7 +604,7 @@ label {
 .purchase-container {
   margin: 30px auto;
   max-width: 600px;
-  border-top: solid 1px;
+  border-top: solid 1px #282827;
 }
 
 .puchaseSignIn {
@@ -658,32 +658,29 @@ label {
   cursor: pointer;
 }
 
-.cardProducer .cardGenre i {
-  font-size: 20px;
-}
-
 .cardTitle {
   width: 80%;
   height: 1rem;
+}
+
+.filmInfo {
+  display: flex;
+  justify-content: space-between;
+  border-top: solid 1px #a27201;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .filmCardBody {
   padding: 0 20px 20px 20px;
 }
 
-.play_button {
-  background-color: #ff3d49;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  right: 20px;
-  bottom: 111px;
-  font-size: 27px;
-  padding-left: 21px;
-  padding-top: 16px;
-  color: #ffffff;
-  cursor: pointer;
+.priceCircle {
+  font-size: 43px;
+  color: olivedrab;
+  font-weight: 900;
+  float: right;
+  margin-top: -40px;
 }
 
 .purchaseFlex {
