--- a/styles/index.css
+++ b/styles/index.css
@@ -134,7 +134,6 @@ p {
 }
 
 .index-section2,
-.index-section3,
 .index-section4 {
   width: 70%;
   padding: 40px;
@@ -236,7 +235,6 @@ footer a {
 }
 
 #filmCardBig {
-  display: flex;
   opacity: 0.9;
   height: 300px;
   width: 400px;
@@ -259,10 +257,21 @@ footer a {
   background-size: cover;
   width: 100%;
   height: 400px;
+  padding: 30px 0;
 }
 
 .index-section3 a {
   text-decoration: none;
+}
+
+.index-section3 h2 {
+  text-align: unset;
+  margin: 20px;
+}
+
+.newReleases {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 @media (min-width: 900px) {
