--- a/styles/styles.css
+++ b/styles/styles.css
@@ -418,6 +418,7 @@ label {
 .check-icon-big {
   font-size: 8em;
   color: #e6b33e;
+  text-align: center;
 }
 
 .success-section {
@@ -430,6 +431,7 @@ label {
   margin: 10% 4%;
   padding: 4%;
   background-color: #373736;
+  display: none;
 }
 
 .success-section h1 {
