--- a/styles/films.css
+++ b/styles/films.css
@@ -7,6 +7,24 @@ body {
   margin: 0;
 }
 
+.loader {
+  border: 10px solid #1b1b1b;
+  border-top: 10px solid #a27201;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 header {
   width: 100%;
   height: 100px;
@@ -228,6 +246,12 @@ p {
   align-items: center;
   margin-top: -16px;
   width: 100%;
+}
+
+.results {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1180px;
 }
 
 .action-section {
