--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,25 @@ body {
   background-color: #373736;
 }
 
+.loader {
+  border: 10px solid #1b1b1b;
+  border-top: 10px solid #a27201;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  animation: spin 2s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 header .right-nav {
   color: #d6d0c8;
   font-size: 1em;
@@ -277,10 +296,12 @@ footer a {
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
+  text-transform: uppercase;
 }
 
 .cardTitle {
   display: none;
+  font-weight: 900;
 }
 
 .cardProducer {
