--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,25 @@ main {
   font-family: Montserrat, Helvetica, sans-serif;
 }
 
+.loader {
+  border: 10px solid #1b1b1b;
+  border-top: 10px solid #a27201;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  animation: spin 2s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 h1 {
   font-family: Montserrat, Helvetica, sans-serif;
   color: #e6b33e;
