--- a/styles/films.css
+++ b/styles/films.css
@@ -182,7 +182,7 @@ p {
 
 .filmCard {
   padding: 0;
-  width: 8rem;
+  width: 11rem;
   margin: 5px;
   border-radius: 5px;
 }
@@ -252,6 +252,9 @@ p {
   display: flex;
   flex-wrap: wrap;
   max-width: 945px;
+  justify-content: center;
+  margin-bottom: 6%;
+  gap: 24px;
 }
 
 .action-section {
@@ -292,7 +295,6 @@ footer a {
 @media (min-width: 500px) {
   .filmCard {
     width: 13rem;
-    margin: 14px;
   }
 
   #filmCardBig {
@@ -332,10 +334,6 @@ footer a {
     width: auto;
     grid-template-columns: auto auto auto auto auto auto;
     column-gap: 10px;
-  }
-
-  .filmCard {
-    width: 7rem;
   }
 
   #filmCardBig {
@@ -387,10 +385,6 @@ footer a {
     height: 22rem;
   }
 
-  .filmCard {
-    width: 10rem;
-  }
-
   .footer-nav {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -408,9 +402,5 @@ footer a {
 @media (min-width: 1100px) {
   .heading-content {
     padding-top: 40px;
-  }
-
-  .filmCard {
-    width: 13rem;
   }
 }
