--- a/styles/styles.css
+++ b/styles/styles.css
@@ -724,10 +724,7 @@ label {
   width: 80%;
   justify-content: space-evenly;
   margin: auto;
-}
-
-#filmCardPurchase {
-  display: none;
+  align-items: center;
 }
 
 #filmCardWatch {
@@ -899,10 +896,6 @@ input:focus {
 @media (min-width: 1000px) {
   .grid-h1 {
     grid-column: 1 / 3;
-  }
-
-  #filmCardPurchase {
-    display: block;
   }
 
   .filmCard {
