--- a/styles/index.css
+++ b/styles/index.css
@@ -277,7 +277,6 @@ footer a {
   background-image: url(/images/jeshoots-com-PpYOQgsZDM4-unsplash.jpg);
   background-size: cover;
   width: 100%;
-  height: 600px;
   padding: 3px 0;
   margin: 12px 0;
 }
@@ -291,12 +290,12 @@ footer a {
   margin: 20px;
 }
 
-.newReleases {
+.featured {
   display: flex;
   justify-content: space-evenly;
-  flex-direction: column;
   align-items: center;
   text-transform: uppercase;
+  flex-wrap: wrap;
 }
 
 .cardTitle {
@@ -309,10 +308,6 @@ footer a {
 }
 
 @media (min-width: 600px) {
-  .newReleases {
-    flex-direction: row;
-  }
-
   #filmCardBig {
     width: 180px;
     margin: unset;
@@ -320,10 +315,6 @@ footer a {
 
   #filmImageBig {
     width: 180px;
-  }
-
-  .index-section3 {
-    height: 200px;
   }
 }
 
@@ -382,7 +373,6 @@ footer a {
   }
 
   .index-section3 {
-    height: 320px;
     padding: 30px 0;
   }
 
